<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, WorkTrackerActivity!</string>
    <string name="app_name">Work Tracker</string>
    <string name="punch_in">Punch In</string>
    <string name="today">Today:</string>
    <string name="work_started_at">Work started at:</string>
    <string name="hours_worked">Hours worked:</string>
    <string name="income">Income:</string>
    <string name="add">Add</string>
    <string name="total_hours">Total Hours:</string>
    <string name="this_week">This week:</string>
    <string name="this_month">This month:</string>
    <string name="settings">*</string>
    <string name="description">Description:</string>
    <string name="settings_menu">Settings</string>
    <string name="manage_entries_menu">Manage Entries</string>
    <string name="manage_jobs_menu">Manage Jobs</string>
    <string name="reports_menu">Reports</string>
    <string name="backup_restore_menu">Backup &amp; Restore</string>
    <string name="help_menu">Help</string>
    <string name="add_entry_menu">Add Entry</string>
    <string name="delete_visible_entries_menu">Delete Visible Entries</string>
    <string name="send_as_csv">Send as CSV</string>
    <string name="advanced_search_menu">Advanced Search</string>
    <string name="start_date">Start date</string>
    <string name="start_date1">Start date:</string>
    <string name="end_date1">End date:</string>
    <string name="middle_line">" - "</string>
    <string name="normal_search_menu">Normal Search</string>
    <string name="tot_income">Total Income:</string>
    <string name="punch_out">Punch Out</string>
    <string name="ok">Ok</string>
    <string name="client">Client:</string>
    <string name="price_per_hour">Price per hour:</string>
    <string name="add_new_job">Add New Job</string>
    <string name="name">Name:</string>
    <string name="save">Save</string>
    <string-array name="type_reports">
		<item>Daily</item>
		<item>Weekly</item>
		<item>Monthly</item>
	</string-array>
    <string-array name="current_period">
        <item>Today</item>
		<item>This week</item>
		<item>This month</item>
    </string-array>
    <string name="select_date_and_time">Select Date and Time:</string>
    <string name="cancel">Cancel</string>
    <string name="end_date">End Date</string>
    <string name="hours">Hours</string>
    <string name="income_reports">Income</string>

</resources>